Fix background stretch issue

--- a/style.css
+++ b/style.css
@@ -19,8 +19,6 @@
 
 
   html {
-      background: var(--bgImage);
-      background-size: cover;
       font-family: 'helvetica neue';
       text-align: center;
       font-size: 10px;
@@ -28,10 +26,12 @@
 
   body {
       background: var(--bgImage);
+      background-size: cover;
       margin: 0;
       font-size: 2rem;
       display: flex;
       flex: 1;
+      height: 10vh;
       min-height: 100vh;
       align-items: center;
       transition: all 0.5s ease-in-out;
